syntax = "proto3";

package activation;

option go_package = "github.com/ziliscite/micro-auth/pkg/protobuf";

service ActivationService {
  // For auth service
  rpc CreateActivation(ActivationRequest) returns (ActivationResponse);

  // For gateway
  rpc ActivateUser(ActivateRequest) returns (ActivateResponse);
}

message ActivationRequest {
  int64 user_id = 1;
  string username = 2;
  string email = 3;
}

message ActivationResponse {
  string status = 1;
}

// Gateway sent token string
message ActivateRequest {
  string token_string = 1;
}

// Response to gateway
message ActivateResponse {
  bool activated = 1;
  string status = 2;
}

